<resources>

    <integer-array name="data_year">
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2019</item>
        <item>2018</item>
    </integer-array>
    <string name="app_name">Movie List</string>
    <string name="movie_name">Nama Film</string>
    <string name="genres_label">Genres</string>
    <string name="movie_genres">Genre 1, Genre 2, Genre 3, …</string>
    <string name="movie_year">Year</string>
    <string name="movie_duration">Duration</string>
    <string name="movie_poster">Poster</string>
    <string name="movie_cover_detail">Cover</string>
    <string name="transparent_dark_cover">Transparent Dark Cover</string>

    <string name="lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora nobis reprehenderit, voluptate sint sit itaque repudiandae eligendi debitis beatae, laudantium eaque numquam officia. Laborum earum nisi quae nihil odio minima?Laudantium eveniet ipsum provident veniam labore, rerum tempora dolorum, vero hic mollitia necessitatibus nesciunt nam esse perspiciatis facere iste debitis suscipit? Assumenda vero asperiores officia a nostrum deleniti ipsum laborum.</string>
    <string name="ini_judul">INI JUDUL</string>
    <string name="ini_genre">INI GENRE</string>
    <string name="ini_durasi">INI DURASI</string>
    <string name="ini_ta_hun">INI TA HUN</string>
    <string name="sinopsis">Sinopsis</string>
    <string name="isi_isi">isi isi</string>
    <string name="ini_sejarah_singkat_fgugfshfshfhsiufs">INI Sejarah singkat fgugfshfshfhsiufs</string>
    <string name="ini_keterangan">INI KETERANGAN</string>

    <string-array name="data_photo">
        <item>@drawable/poster_a_star</item>
        <item>@drawable/poster_aquaman</item>
        <item>@drawable/poster_avengerinfinity</item>
        <item>@drawable/poster_birdbox</item>
        <item>@drawable/poster_bohemian</item>
        <item>@drawable/poster_bumblebee</item>
        <item>@drawable/poster_creed</item>
        <item>@drawable/poster_deadpool</item>
        <item>@drawable/poster_dragon</item>
        <item>@drawable/poster_dragonball</item>
    </string-array>

    <string-array name="data_name">
        <item>A Star Is Born</item>
        <item>Aquaman</item>
        <item>Avengers: Infinity War</item>
        <item>Bird Box</item>
        <item>Bohemian Rhapsody</item>
        <item>BumbleBee</item>
        <item>Creed II</item>
        <item>Once Upon a Deadpool</item>
        <item>How to Train Your Dragon: The Hidden World</item>
        <item>Dragon Ball Super: Broly</item>
    </string-array>

    <string-array name="data_genres">
        <item>Drama, Romance, Music</item>
        <item>Action, Adventure, Fantasy</item>
        <item>Action, Adventure, Fantasy</item>
        <item>Thriller, Drama</item>
        <item>Drama, Music</item>
        <item>Action, Adventure, Science Fiction</item>
        <item>Drama</item>
        <item>Comedy, Action</item>
        <item>Animation, Family, Adventure</item>
        <item>Action, Animation, Fantasy, Adventure, Comedy, Science Fiction</item>
    </string-array>

    <string-array name="data_duration">
        <item>2h 15m</item>
        <item>2h 24m</item>
        <item>2h 29m</item>
        <item>2h 4m</item>
        <item>2h 15m</item>
        <item>1h 54m</item>
        <item>2h 10m</item>
        <item>1h 57m</item>
        <item>1h 44m</item>
        <item>1h 41m</item>
    </string-array>

    <string-array name="data_description">
        <item>Seasoned musician Jackson Maine discovers \— and falls in love with \— struggling artist Ally. She has just about given up on her dream to make it big as a singer \— until Jack coaxes her into the spotlight. But even as Ally\'s career takes off, the personal side of their relationship is breaking down, as Jack fights an ongoing battle with his own internal demons.</item>
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power\-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orm\'s half\-human, half\-Atlantean brother and true heir to the throne.</item>
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment \- the fate of Earth and existence itself has never been more uncertain.</item>
        <item>Five years after an ominous unseen presence drives most of society to suicide, a survivor and her two children make a desperate bid to reach safety.</item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock \'n\' roll band Queen in 1970. Hit songs become instant classics. When Mercury\'s increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet – finding a way to keep the band together amid the success and excess.</item>
        <item>On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle\-scarred and broken. When Charlie revives him, she quickly learns this is no ordinary yellow VW bug.</item>
        <item>Between personal obligations and training for his next big fight against an opponent with ties to his family\'s past, Adonis Creed is up against the challenge of his life.</item>
        <item>A kidnapped Fred Savage is forced to endure Deadpool\'s PG\-13 rendition of Deadpool 2 as a Princess Bride\-esque story that\'s full of magic, wonder and zero F\'s.</item>
        <item>As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless’ discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup’s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind.</item>
        <item>Earth is peaceful following the Tournament of Power. Realizing that the universes still hold many more strong people yet to see, Goku spends all his days training to reach even greater heights. Then one day, Goku and Vegeta are faced by a Saiyan called \'Broly\' who they\'ve never seen before. The Saiyans were supposed to have been almost completely wiped out in the destruction of Planet Vegeta, so what\'s this one doing on Earth? This encounter between the three Saiyans who have followed completely different destinies turns into a stupendous battle, with even Frieza (back from Hell) getting caught up in the mix.</item>
    </string-array>
</resources>
