<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#a30000"
    android:weightSum="100">


    <ImageView
        android:id="@+id/img_item_photo"
        android:layout_width="179dp"
        android:layout_height="223dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="5dp"
        android:layout_toStartOf="@+id/textView"
        android:paddingStart="5dp"
        android:scaleType="centerCrop"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="179dp"
        android:layout_height="47dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="21dp"
        android:background="@drawable/judul"
        android:text="@string/ini_judul"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="180dp"
        android:layout_height="42dp"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_marginStart="0dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="-1dp"
        android:background="@drawable/judul"
        android:text="@string/ini_genre"
        android:textAlignment="center"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="192dp"
        android:textAlignment="center"
        android:layout_height="30dp"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_alignEnd="@+id/textView2"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/judul"
        android:textColor="#fff"
        android:layout_marginEnd="0dp"
        android:text="@string/ini_durasi" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="179dp"
        android:layout_height="29dp"
        android:layout_below="@+id/textView3"
        android:layout_alignEnd="@+id/textView3"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="-1dp"
        android:text="@string/ini_ta_hun"
        android:background="@drawable/judul"
        android:textColor="#fff"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="98dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_item_photo"
        android:layout_alignStart="@+id/img_item_photo"
        android:layout_marginStart="18dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="83dp"
        android:layout_toStartOf="@+id/textView4"
        android:text="@string/sinopsis"
        android:textColor="#fff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="374dp"
        android:layout_height="256dp"
        android:layout_below="@+id/textView6"
        android:layout_alignStart="@+id/textView6"
        android:layout_alignEnd="@+id/textView6"
        android:layout_marginStart="-15dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="-263dp"
        android:background="@drawable/judul"
        android:paddingTop="3dp"
        android:text="@string/isi_isi"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="17sp" />

</RelativeLayout>